[JACKSON 3] Update jackson to version 3
- Fixed all jackson usages for the new jackson 3 api
- Also updated some other dependencies
- New Major to clearly show this one uses jackson 3